Add noscript tag to head and body of  the following files
addition_assignment.html
assignment.html
coercion.html
comments.html
divide.html
division_assignment.html
domain_one_questions_part_one.html
exam_objectives.html
exponentiation_assignment.html
increment_decrement.html
indentation.html
minus.html
modulus.html
multiplication_assignment.html
multiply.html
naming_conventions.html
noscript.html
/lus.html
power.html
questions_template.html
remainder_assignment.html
search.html
subtraction_assignment.html
../index.html

Create and populate the following file

nojs.css

--- a/html/assignment.html
+++ b/html/assignment.html
@@ -35,6 +35,10 @@
         }
     </style>
 
+    <noscript>
+        <link rel="stylesheet" href="../css/nojs.css">
+    </noscript>
+
 </head>
 
 <body>
@@ -70,6 +74,8 @@
 
             <main>
                 <article>
+
+                    <noscript><span>This Web Site requires JavaScript!</span></noscript>
                     <h1 class="count">Assignment (=)</h1>
                     <ol>
 
