--- a/html/minus.html
+++ b/html/minus.html
@@ -27,6 +27,10 @@
         }
     </style>
 
+<noscript>
+  <link rel="stylesheet" href="../css/nojs.css">
+</noscript>
+
 </head>
 
 <body>
@@ -62,6 +66,7 @@
 
             <main>
                 <article>
+<noscript><span>This Web Site requires JavaScript!</span></noscript>
                     <h1 class="count">Introduction</h1>
                     <ol>
                         <li>The subtraction (-) operator subtracts the two operands, producing their difference
