--- a/html/modulus.html
+++ b/html/modulus.html
@@ -39,6 +39,10 @@
         }
     </style>
 
+<noscript>
+  <link rel="stylesheet" href="../css/nojs.css">
+</noscript>
+
 </head>
 
 <body>
@@ -74,6 +78,7 @@
 
             <main>
                 <article>
+<noscript><span>This Web Site requires JavaScript!</span></noscript>
                     <h1 class="count">Introduction</h1>
                     <ol>
                         <li>
