--- a/html/naming_conventions.html
+++ b/html/naming_conventions.html
@@ -32,6 +32,10 @@
         }
     </style>
 
+<noscript>
+  <link rel="stylesheet" href="../css/nojs.css">
+</noscript>
+
 </head>
 
 <body>
@@ -67,6 +71,7 @@
 
             <main>
                 <article>
+<noscript><span>This Web Site requires JavaScript!</span></noscript>
                     <h1 class="count">camelCase</h1>
                     <ol>
                         <li>Camel case is a way of writing phrases without spaces, where the first letter of each word
