--- a/html/noscript.html
+++ b/html/noscript.html
@@ -62,7 +62,7 @@
             <main>
                 <article>
 <noscript><span>This Web Site requires JavaScript!</span></noscript>
-                    <h1>Introduction</h1>
+                    <h1 class="count">Introduction</h1>
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, suscipit odio? Obcaecati
                         repellendus nesciunt adipisci ratione ducimus dolorem ipsa dolores?
@@ -70,12 +70,23 @@
                 </article>
 
                 <article>
-                    <h1 class="count">Question</h1>
+                    <h1 class="count">Code Example</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores culpa quasi doloremque, ab
+                        iusto
+                        totam cupiditate. Mollitia voluptatem assumenda voluptatibus?
+                    </p>
+
                     <details open><!--details CODE-->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
-INSERT CODE
-</pre><!-- code-content -->
+
+#include &lt;stdio.h&gt;
+        
+int main()
+  {
+    printf("Hello world\n");
+  }</pre><!-- code-content -->
                     </details><!--details CODE-->
 
                     <br class="small-view">
@@ -83,55 +94,41 @@ INSERT CODE
                     <details open><!--Details CONSOLE -->
                         <summary class="details-console-summary">[JavaScript Inserts]</summary>
                         <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT (small view) 
-</pre><!-- small-view -->
+
+clang helloworld.c -o 
+    zhelloworld.o
+
+./helloworld.o
+
+// Hello world
+                            </pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT (wide view) 
-</pre><!-- wide-view -->
-                    </details><!--details CONSOLE -->
-                </article>
 
+clang helloworld.c -o helloworld.o
 
-                <article>
-                    <h1 class="count">Question</h1>
-                    <details open><!--details CODE-->
-                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
-                        <pre class="details-code-aclass">
-INSERT CODE
-</pre><!-- code-content -->
-                    </details><!--details CODE-->
+./helloworld.o
 
-                    <br class="small-view">
-                    <br class="wide-view">
-                    <details open><!--Details CONSOLE -->
-                        <summary class="details-console-summary">[JavaScript Inserts]</summary>
-                        <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT (small view) 
-</pre><!-- small-view -->
-                        <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT (wide view) 
-</pre><!-- wide-view -->
-                    <!--ususally inserted before details-console end tag-->
-                    <dl class="details-dl">
-                        <dt>Note</dt>
-                        <dd>INSERT TEXT</dd>
-                    </dl>
+// Hello world
+                            </pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
                 </article>
 
                 <article>
-                    <h1 class="count">Question</h1>
+                    <h1 class="count">Code Example</h1>
                     <details open><!--details CODE-->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
 INSERT CODE
-</pre><!-- code-content -->
+  </pre><!-- code-content -->
                     </details><!--details CODE-->
 
                     <br class="small-view">
                     <br class="wide-view">
+
                     <details open><!--Details CONSOLE -->
-                        <summary class="details-console-summary">[JavaScript Inserts]</summary>
+                        <summary class="details-console-summary">
+                            [JavaScript Inserts]
+                        </summary>
                         <pre class="details-console-aclass small-view">
 INSERT CONSOLE OUTPUT (small view) 
 </pre><!-- small-view -->
@@ -139,162 +136,17 @@ INSERT CONSOLE OUTPUT (small view)
 INSERT CONSOLE OUTPUT (wide view) 
 </pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
+
                 </article>
 
                 <article>
-                    <h1 class="count">Question</h1>
-                    <details open><!--details CODE-->
-                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
-                        <pre class="details-code-aclass">
-INSERT CODE
-</pre><!-- code-content -->
-                    </details><!--details CODE-->
+                    <h1 class="count">Notes</h1>
 
-                    <br class="small-view">
-                    <br class="wide-view">
-                    <details open><!--Details CONSOLE -->
-                        <summary class="details-console-summary">[JavaScript Inserts]</summary>
-                        <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT (small view) 
-</pre><!-- small-view -->
-                        <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT (wide view) 
-</pre><!-- wide-view -->
-                    </details><!--details CONSOLE -->
+                    <ol>
+                        <li>I am an item</li>
+                    </ol>
+
                 </article>
-
-                <article>
-                    <h1 class="count">Question</h1>
-                    <details open><!--details CODE-->
-                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
-                        <pre class="details-code-aclass">
-INSERT CODE
-</pre><!-- code-content -->
-                    </details><!--details CODE-->
-
-                    <br class="small-view">
-                    <br class="wide-view">
-                    <details open><!--Details CONSOLE -->
-                        <summary class="details-console-summary">[JavaScript Inserts]</summary>
-                        <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT (small view) 
-</pre><!-- small-view -->
-                        <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT (wide view) 
-</pre><!-- wide-view -->
-                    </details><!--details CONSOLE -->
-                </article>
-
-                <article>
-                    <h1 class="count">Question</h1>
-                    <details open><!--details CODE-->
-                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
-                        <pre class="details-code-aclass">
-INSERT CODE
-</pre><!-- code-content -->
-                    </details><!--details CODE-->
-
-                    <br class="small-view">
-                    <br class="wide-view">
-                    <details open><!--Details CONSOLE -->
-                        <summary class="details-console-summary">[JavaScript Inserts]</summary>
-                        <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT (small view) 
-</pre><!-- small-view -->
-                        <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT (wide view) 
-</pre><!-- wide-view -->
-                    </details><!--details CONSOLE -->
-                </article>
-
-                <article>
-                    <h1 class="count">Question</h1>
-                    <details open><!--details CODE-->
-                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
-                        <pre class="details-code-aclass">
-INSERT CODE
-</pre><!-- code-content -->
-                    </details><!--details CODE-->
-
-                    <br class="small-view">
-                    <br class="wide-view">
-                    <details open><!--Details CONSOLE -->
-                        <summary class="details-console-summary">[JavaScript Inserts]</summary>
-                        <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT (small view) 
-</pre><!-- small-view -->
-                        <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT (wide view) 
-</pre><!-- wide-view -->
-                    </details><!--details CONSOLE -->
-                </article>
-
-                <article>
-                    <h1 class="count">Question</h1>
-                    <details open><!--details CODE-->
-                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
-                        <pre class="details-code-aclass">
-INSERT CODE
-</pre><!-- code-content -->
-                    </details><!--details CODE-->
-
-                    <br class="small-view">
-                    <br class="wide-view">
-                    <details open><!--Details CONSOLE -->
-                        <summary class="details-console-summary">[JavaScript Inserts]</summary>
-                        <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT (small view) 
-</pre><!-- small-view -->
-                        <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT (wide view) 
-</pre><!-- wide-view -->
-                    </details><!--details CONSOLE -->
-                </article>
-
-                <article>
-                    <h1 class="count">Question</h1>
-                    <details open><!--details CODE-->
-                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
-                        <pre class="details-code-aclass">
-INSERT CODE
-</pre><!-- code-content -->
-                    </details><!--details CODE-->
-
-                    <br class="small-view">
-                    <br class="wide-view">
-                    <details open><!--Details CONSOLE -->
-                        <summary class="details-console-summary">[JavaScript Inserts]</summary>
-                        <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT (small view) 
-</pre><!-- small-view -->
-                        <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT (wide view) 
-</pre><!-- wide-view -->
-                    </details><!--details CONSOLE -->
-                </article>
-
-                <article>
-                    <h1 class="count">Question</h1>
-                    <details open><!--details CODE-->
-                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
-                        <pre class="details-code-aclass">
-INSERT CODE
-</pre><!-- code-content -->
-                    </details><!--details CODE-->
-
-                    <br class="small-view">
-                    <br class="wide-view">
-                    <details open><!--Details CONSOLE -->
-                        <summary class="details-console-summary">[JavaScript Inserts]</summary>
-                        <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT (small view) 
-</pre><!-- small-view -->
-                        <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT (wide view) 
-</pre><!-- wide-view -->
-                    </details><!--details CONSOLE -->
-                </article>
-                <!--here1-->
 
                 <article>
                     <h1 class="count refs-heading">References</h1>
@@ -343,6 +195,7 @@ INSERT CONSOLE OUTPUT (wide view)
     <script src="../js/constants_variables.js"></script><!-- JS Constants_variables -->
 
     <script>
+        'use strict'
 
         // page title
         document.title = getPageTitle(pageTitleArr, pageArr, baseFileName);
@@ -413,40 +266,40 @@ INSERT CONSOLE OUTPUT (wide view)
                 // media with widths LESS THAN max-width (440px) (mobile)
 
                 for (const el of arr) {
+                    // for (const el of [0, 1, 2]) {
                     condRemoveAttribute(condition, "details", el, "open");
-                    //[0,1,2,3, ...]
                 }
 
                 // Use conditionTwo to REMOVE open attribute from 
                 // media with widths GREATER THAN min-width (440px)
 
                 for (const el of oddsArr) {
+                    // for (const el of [1]) {
                     condRemoveAttribute(conditionTwo, "details", el, "open");
-                    //[1,3,5, ...]
                 }
 
                 // toggle innerHTML
                 for (const el of evensArr) {
+                    // for (const el of [0]) {
                     toggleFirstChildInnerHTML(targets[el], "open", "", "Code");
-                    //[0,2,4,6, ...]
                 }
 
                 for (const el of oddsArr) {
+                    // for (const el of [1]) {
                     toggleFirstChildInnerHTML(targets[el], "open", "", "Console");
-                    //[1,3,5, ...]
                 }
 
                 toggleFirstChildInnerHTML(targets[biblioIndex], "open", "", "Bibliography");
 
                 // Toggle classes
                 for (const el of evensArr) {
+                    // for (const el of [0]) {
                     toggleClass(targets[el], "open", "details-code-aclass", "details-code-bclass");
-                    //[0,2,4, ...]
                 }
 
                 for (const el of oddsArr) {
+                    // for (const el of [1]) {
                     toggleClass(targets[el], "open", "details-console-aclass", "details-console-bclass");
-                    //[1,3,5, ...]
                 }
 
                 toggleClass(targets[biblioIndex], "open", "details-refs-aclass", "details-refs-bclass");
@@ -456,7 +309,7 @@ INSERT CONSOLE OUTPUT (wide view)
         // Event Listeners on Details tags 
         // 1) CODE
         for (const el of evensArr) {
-            //[0,1,3, ...]
+            // for (const el of [0]) {
             targets[el].addEventListener("toggle",
                 function () {
                     toggleFirstChildInnerHTML(this, "open", "", "Code");
@@ -467,6 +320,7 @@ INSERT CONSOLE OUTPUT (wide view)
 
         // 2) CONSOLE
         for (const el of oddsArr) {
+            // for (const el of [1]) {
             targets[el].addEventListener("toggle",
                 function () {
                     toggleFirstChildInnerHTML(this, "open", "", "Console");
