--- a/html/subtraction_assignment.html
+++ b/html/subtraction_assignment.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+t<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -27,6 +27,10 @@
             padding-left: 10%;
         }
     </style>
+
+<noscript>
+  <link rel="stylesheet" href="../css/nojs.css">
+</noscript>
 
 </head>
 
@@ -63,6 +67,7 @@
 
             <main>
                 <article>
+<noscript><span>This Web Site requires JavaScript!</span></noscript>
                     <h1 class="count">Introduction</h1>
                     <ol>
                         <li>The subtraction assignment (-=) operator performs subtraction on the two operands and
