--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
 
+  <noscript>
+    <link rel="stylesheet" href="./css/nojs.css">
+  </noscript>
+
 </head>
 
 <body>
@@ -81,6 +85,7 @@
         </header>
 
         <article>
+          <noscript><span>This Web Site requires JavaScript!</span></noscript>
           <h1 class="align-left">Contents</h1>
           <div id="myindex"></div>
         </article>
