--- a/html/comments.html
+++ b/html/comments.html
@@ -30,6 +30,10 @@
             padding-left: 5%;
         }
     </style>
+    
+<noscript>
+  <link rel="stylesheet" href="../css/nojs.css">
+</noscript>
 
 </head>
 
@@ -65,6 +69,7 @@
             </div><!--aside-right -->
 
             <main>
+<noscript><span>This Web Site requires JavaScript!</span></noscript>
                 <article>
                     <h1 class="count">Introduction</h1>
                     <ol>
