--- a/html/domain_one_questions_part_one.html
+++ b/html/domain_one_questions_part_one.html
@@ -22,6 +22,10 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
 
+<noscript>
+  <link rel="stylesheet" href="../css/nojs.css">
+</noscript>
+
 </head>
 
 <body>
@@ -56,6 +60,7 @@
             </div><!--aside-right -->
 
             <main>
+<noscript><span>This Web Site requires JavaScript!</span></noscript>
                 <article>
                     <h1>Introduction</h1>
                     <p>
