--- a/html/exam_objectives.html
+++ b/html/exam_objectives.html
@@ -38,6 +38,10 @@
         }
     </style>
 
+<noscript>
+  <link rel="stylesheet" href="../css/nojs.css">
+</noscript>
+
 </head>
 
 <body>
@@ -73,6 +77,7 @@
 
             <main>
                 <article>
+<noscript><span>This Web Site requires JavaScript!</span></noscript>
                     <h1 class="count">JavaScript Operators, Methods, and Keywords</h1>
                     <h2 class="xcount">Complete and debug code that uses assignment and arithmetic
                         operators</h2>
