--- a/html/plus.html
+++ b/html/plus.html
@@ -35,6 +35,10 @@
         }
     </style>
 
+<noscript>
+  <link rel="stylesheet" href="../css/nojs.css">
+</noscript>
+
 </head>
 
 <body>
@@ -70,6 +74,7 @@
 
             <main>
                 <article>
+<noscript><span>This Web Site requires JavaScript!</span></noscript>
                     <h1 class="count">Introduction</h1>
                     <ol>
                         <li>The addition (+) operator produces
