--- a/html/power.html
+++ b/html/power.html
@@ -38,6 +38,10 @@
         }
     </style>
 
+<noscript>
+  <link rel="stylesheet" href="../css/nojs.css">
+</noscript>
+
 </head>
 
 <body>
@@ -73,6 +77,7 @@
 
             <main>
                 <article>
+<noscript><span>This Web Site requires JavaScript!</span></noscript>
                     <h1 class="count">Introduction</h1>
                     <ol>
                         <li>
