remove spurious "t" from subtraction_assignment.html

--- a/html/subtraction_assignment.html
+++ b/html/subtraction_assignment.html
@@ -1,4 +1,4 @@
-t<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -28,9 +28,9 @@ t<!DOCTYPE html>
         }
     </style>
 
-<noscript>
-  <link rel="stylesheet" href="../css/nojs.css">
-</noscript>
+    <noscript>
+        <link rel="stylesheet" href="../css/nojs.css">
+    </noscript>
 
 </head>
 
@@ -67,7 +67,7 @@ t<!DOCTYPE html>
 
             <main>
                 <article>
-<noscript><span>This Web Site requires JavaScript!</span></noscript>
+                    <noscript><span>This Web Site requires JavaScript!</span></noscript>
                     <h1 class="count">Introduction</h1>
                     <ol>
                         <li>The subtraction assignment (-=) operator performs subtraction on the two operands and
