update content in let_var.html

--- a/html/let_var.html
+++ b/html/let_var.html
@@ -414,7 +414,8 @@ console.log(foo)
 function myfn (arg) {
     let arg = 10
     return arg;
-} </pre><!-- code-content -->
+} 
+myfn(20) </pre><!-- code-content -->
                     </details><!--details CODE-->
 
                     <br class="small-view">
@@ -473,10 +474,10 @@ if(foo) {
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
 try {
-let foo = 1;
+    let foo = 1;
 
 } catch (err) {
-let err ="none";
+    let err ="none";
 } </pre><!-- code-content -->
                     </details><!--details CODE-->
 
