update content in const.html

--- a/html/const.html
+++ b/html/const.html
@@ -146,11 +146,6 @@
 
                 <article>
                     <h1 class="count">Code Example</h1>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores culpa quasi doloremque, ab
-                        iusto
-                        totam cupiditate. Mollitia voluptatem assumenda voluptatibus?
-                    </p>
 
                     <details open><!--details CODE-->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
@@ -227,6 +222,33 @@ Uncaught TypeError:
                         <pre class="details-console-aclass wide-view">
 Uncaught TypeError: 
     invalid assignment to const 'a' </pre><!-- wide-view -->
+                    </details><!--details CONSOLE -->
+
+                </article>
+
+                <article>
+                    <h1 class="count">Code Example</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
+const a = 10;
+let a = 20;
+console.log(a) </pre><!-- code-content -->
+                    </details><!--details CODE-->
+
+                    <br class="small-view">
+                    <br class="wide-view">
+
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">
+                            [JavaScript Inserts]
+                        </summary>
+                        <pre class="details-console-aclass small-view">
+Uncaught SyntaxError: 
+    redeclaration of const a </pre><!-- small-view -->
+                        <pre class="details-console-aclass wide-view">
+Uncaught SyntaxError: 
+    redeclaration of const a </pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
 
                 </article>
@@ -325,31 +347,6 @@ INSERT CONSOLE OUTPUT ONE(wide view)
                 </article>
 
 
-                <article>
-                    <h1 class="count">Code Example</h1>
-                    <details open><!--details CODE-->
-                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
-                        <pre class="details-code-aclass">
-INSERT CODE TWO
-  </pre><!-- code-content -->
-                    </details><!--details CODE-->
-
-                    <br class="small-view">
-                    <br class="wide-view">
-
-                    <details open><!--Details CONSOLE -->
-                        <summary class="details-console-summary">
-                            [JavaScript Inserts]
-                        </summary>
-                        <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT TWO (small view) 
-</pre><!-- small-view -->
-                        <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT TWO (wide view) 
-</pre><!-- wide-view -->
-                    </details><!--details CONSOLE -->
-
-                </article>
 
                 <article>
                     <h1 class="count">Code Example</h1>
